--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,11 @@ on:
     paths-ignore:
       - "**.md"
 
+permissions:
+  contents: read
+  packages: read
+  issues: write
+
 env:
   GO111MODULE: on
   GOPROXY: "https://proxy.golang.org"
