--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -10,6 +10,11 @@ on:
   schedule:
     - cron: "0 5 * * 6"
 
+permissions:
+  contents: read
+  packages: read
+  issues: write
+
 jobs:
   analyze:
     name: Analyze
